# jcs-canonicalize

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/: cyberphone_corpus.rs  edge_cases.rs  jcs_golden.rs  rfc8785_appendix_e.rs
tests/fixtures/cyberphone-corpus/: NOTICE.md
tests/fixtures/external-pinned/: jcs-golden.json
