[package]
name = "jcs-canonicalize"
description = "RFC 8785 JSON canonicalizer with SHA-256-over-canonical-bytes helper"
version = "0.2.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/arcanesys/jcs-canonicalize"
homepage = "https://github.com/arcanesys/jcs-canonicalize"
authors = ["Arcanesys"]
keywords = ["json", "canonicalization", "jcs", "rfc8785", "signing"]
categories = ["command-line-utilities", "encoding"]
readme = "README.md"

[lib]
name = "jcs_canonicalize"
path = "src/lib.rs"

[[bin]]
name = "jcs-canonicalize"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_jcs = "0.2"
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
